<resources>
    <string name="app_name">EmoPulse</string>
    <string name="mind_linked_neural">mind linked neural</string>
    <string name="emopluse_logo">emopluse logo</string>
    <string name="mind_neural_image">mind neural image</string>
    <string name="neural_link_image">neural link image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">already have an account? Login</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="log_in">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with">sign up with</string>
    <string name="not_registered_yet_sign_up">not registered yet ! Sign up</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="articles">Articles</string>
    <string name="exercises">Exercises</string>
    <string name="goals">Goals</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises_description">simple and effective therapeutic techniques that can manage stress, build mindfulness, and improve emotional regulation. Each technique have an instructional guide.</string>
    <string name="grounding_description">Reduces feelings of overwhelm or anxiety by focusing on the present.</string>
    <string name="body_scan_description">Check in with your body to relax.</string>
    <string name="progressive_muscle_relaxation">Reduce stress by relaxing muscles.</string>
    <string name="breathing_description">Breathe deeply to relax and center</string>
    <string name="butterfly_description">Calms emotions with soothing self-hug</string>
    <string name="imagery_description">Visualize calm places to reduce stress.</string>
    <string name="repetitive_phrases_description">Repeat positive phrases to boost confidence.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="data_authorisation">Autorisez l\'utilisation de votre contenu pour entraîner nos modèles et améliorer les performances de AI Model pour vous et tous ceux qui l\'utilisent. Nous prenons des mesures pour protéger votre vie privée.</string>
    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>Arabic</item>
    </string-array>
    <string name="general_questions">General Questions</string>
    <string name="q_what_is_emopulse">Q: What is EmoPulse?</string>
    <string name="what_is_emopulse_answer">A: EmoPulse is a Cognitive Behavioral Therapy (CBT) chatbot app designed to help you improve your mental well-being by tracking your emotions, offering CBT-based exercises, and engaging in conversations to provide guidance.</string>
    <string name="q_who_can_use_emopulse">Q: Who can use EmoPulse?</string>
    <string name="who_can_use_emopulse_answer">A: EmoPulse is designed for anyone looking to manage their mental health better, understand their emotions, and practice CBT techniques.</string>
    <string name="q_how_does_emopulse_work">Q: How does EmoPulse work?</string>
    <string name="how_does_emopulse_work_answer">A: EmoPulse uses CBT principles and AI-powered conversational tools to provide emotional support, suggest exercises, and help you set and achieve mental health goals.</string>
    <string name="q_can_i_track_my_progress_in_emopulse">Q: Can I track my progress in EmoPulse?</string>
    <string name="can_i_track_my_progress_in_emopulse_answer">A: Yes! EmoPulse includes a progress dashboard where you can track your mood changes, completed exercises, and other mental health milestones.</string>
    <string name="q_does_emopulse_support_real_time_voice_interactions">Q: Does EmoPulse support real-time voice interactions?</string>
    <string name="does_emopulse_support_real_time_voice_interactions_answer">A: Yes, you can talk to EmoPulse in real-time using voice chat, and it will respond to you through audio and text.</string>
    <string name="q_are_the_conversations_stored_or_shared">Q: Are the conversations stored or shared?</string>
    <string name="are_the_conversations_stored_or_shared_answer">A: Your privacy is our priority. EmoPulse only stores your conversations locally on your device. We do not share your data with third partie</string>
    <string name="q_do_i_need_an_account_to_use_emopulse">Q: Do I need an account to use EmoPulse?</string>
    <string name="do_i_need_an_account_to_use_emopulse_answer">A: Yes, you need to sign up with your email and password to use EmoPulse. We don’t collect additional personal information.</string>
    <string name="q_is_my_data_safe">Q: Is my data safe?</string>
    <string name="is_my_data_safe_answer">A: Absolutely! EmoPulse ensures that all your data is stored securely and locally, keeping your information private.</string>
    <string name="q_what_kind_of_exercises_does_emopulse_offer">Q: What kind of exercises does EmoPulse offer?</string>
    <string name="what_kind_of_exercises_does_emopulse_offer_answer">A: EmoPulse provides a range of CBT-based exercises, such as thought diaries, relaxation techniques, gratitude exercises, and mindfulness activities.</string>
    <string name="q_can_i_customize_my_goals">Q: Can I customize my goals?</string>
    <string name="can_i_customize_my_goals_answer">A: Yes, you can set personalized goals with deadlines, specify how often to complete them, and track your progress over time.</string>
    <string name="q_emopulse_isn_t_working_correctly_what_should_i_do">Q: EmoPulse isn\'t working correctly. What should I do?</string>
    <string name="emopulse_isn_t_working_correctly_what_should_i_do_answer">A: Try restarting the app or checking your internet connection. If the issue persists, contact us through the \' Contact Us \' section in the app.</string>
    <string name="functionality">Functionality</string>
    <string name="account_and_privacy">Account and Privacy</string>
    <string name="features">Features</string>
    <string name="technical_support">Technical Support</string>
    <string name="guide_part_1">Sit or lie down in a comfortable position with your back straight.</string>
    <string name="guide_part_2"> Place the tip of your tongue against the ridge of tissue just behind your upper front teeth and keep it there throughout the exercise.</string>
    <string name="guide_part_3"> Exhale fully through your mouth, making a whooshing sound.</string>
    <string name="guide_part_4">Close your mouth and inhale quietly through your nose to a mental count of four.</string>
    <string name="guide_part_5"> Hold your breath for a count of seven.</string>
    <string name="guide_part_6">Exhale completely through your mouth, making a whooshing sound to a count of eight.</string>
    <string name="guide_part_7">This completes one breath. Repeat the cycle four times to complete the exercise.</string>
    <string name="breathing_4_7_8_description">The 4–7–8 breathing technique is a simple yet powerful relaxation exercise. It helps calm the mind, reduce stress, and improve focus.</string>
    <string name="grounding_ex_description">it helps you focus on the present moment, reducing anxiety and stress by engaging your senses. It brings your attention back to the \'here and now.\'</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faqs">Faqs</string>
    <string name="settings">Settings</string>
    <string name="switch_language">Switch Language</string>
    <string name="english">english</string>
    <string name="frensh">french</string>
    <string name="spanish">spanish</string>
    <string name="arabe">arabe</string>
    <string name="notifications">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="app_notifications">App Notifications</string>
    <string name="checks_in">Checks In</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete account</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="share_data">Share Data</string>
    <string name="export_data">Export Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="btn_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">log out</string>
    <string name="done">Done</string>
    <string name="check_your_email_to_verify_your_email_and_continue">check your email to verify your email and continue</string>
    <string name="resend">Resend</string>
    <string name="back">Back</string>
    <string name="lelly">Lelly</string>
    <string name="artificial_inteligence">artificial Intelligence</string>
    <string name="bot_message">bot message</string>
    <string name="title">Title</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="go">Go</string>
    <string name="breathing">Breathing</string>
    <string name="inhale">inhale</string>
    <string name="start">Start</string>
    <string name="do_it_again">do it again !</string>
    <string name="experess_your_feelings_here">express your feelings here …</string>
    <string name="message">Message</string>
    <string name="type_your_message_here">type your message here …</string>
    <string name="submit">Submit</string>
    <string name="this_is_your_safe_space_to_track_your_progress_celebrate_your_wins_and_reflect_on_your_journey">This is your safe space to track your progress, celebrate your wins, and reflect on your journey.</string>
    <string name="small_steps_every_day_lead_to_big_changes">“Small steps every day lead to big changes.”</string>
    <string name="mood_tracking">Mood Tracking</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="conversation_summary">Conversation Summary</string>
    <string name="interactivity_with_lelly">interactivity with lelly</string>
    <string name="mood_indecators">Mood Indicators</string>
    <string name="grounding">Grounding</string>
    <string name="body_scan">Body Scan</string>
    <string name="butterfly">Butterfly</string>
    <string name="progressive_muscle_relaxation_title">Progressive Muscle Relaxation</string>
    <string name="guided_imagery">Guided Imagery</string>
    <string name="emopulse_faqs">EmoPulse FAQS</string>
    <string name="enter_your_email">enter your email</string>
</resources>