<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FaqsFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emopulse_faqs"
                android:textColor="@color/navy_light"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="by EmoPulse  . 10 Nov 2024"
                android:textColor="@color/gray"
                android:textStyle="italic" />

            <!--generale questions-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/general_questions"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_what_is_emopulse"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/what_is_emopulse_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_who_can_use_emopulse"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/who_can_use_emopulse_answer"
                android:textSize="16sp"
                android:textStyle="italic"

                />
            <!--functionality-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/functionality"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_how_does_emopulse_work"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/how_does_emopulse_work_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_can_i_track_my_progress_in_emopulse"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/can_i_track_my_progress_in_emopulse_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_does_emopulse_support_real_time_voice_interactions"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/does_emopulse_support_real_time_voice_interactions_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_are_the_conversations_stored_or_shared"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/are_the_conversations_stored_or_shared_answer"
                android:textSize="16sp"
                android:textStyle="italic" />
            <!--        account and privacy-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/account_and_privacy"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_do_i_need_an_account_to_use_emopulse"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/do_i_need_an_account_to_use_emopulse_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_is_my_data_safe"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/is_my_data_safe_answer"
                android:textSize="16sp"
                android:textStyle="italic" />
            <!--        features-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/features"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_what_kind_of_exercises_does_emopulse_offer"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/what_kind_of_exercises_does_emopulse_offer_answer"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_can_i_customize_my_goals"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/can_i_customize_my_goals_answer"
                android:textSize="16sp"
                android:textStyle="italic" />
            <!--        answer-->
            <!--        technical support-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/technical_support"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/q_emopulse_isn_t_working_correctly_what_should_i_do"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <!--        answer-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/emopulse_isn_t_working_correctly_what_should_i_do_answer"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>