<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.signUp"
    android:orientation="vertical"
    android:gravity="center"
    >
<!--    title-->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_weight="0.5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_weight="1.5"
        >
<!--email field-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/outline_email_24"
        app:endIconMode="clear_text"
        app:startIconTint="@color/white"
        android:textColorHint="@color/gray"
        app:hintTextColor="@color/white"
        android:backgroundTint="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"


            />
    </com.google.android.material.textfield.TextInputLayout>
<!--password field-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/outline_lock_24"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/white"
        android:textColorHint="@color/gray"
        app:hintTextColor="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>
<!--    confirm password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/outline_lock_24"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/white"
        android:textColorHint="@color/gray"
        app:hintTextColor="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>
<!--button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"/>

    </LinearLayout>
<!--google login layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_weight="0.7"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <!-- Google Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_with_google"
            android:drawableLeft="@drawable/google_icon"
            android:textColor="@color/navy"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeStepGranularity="2sp"
            app:backgroundTint="@null"
            android:background="@drawable/google_btn_bg"
            android:layout_margin="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
             />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account_log_in"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorLink="@color/cyan"

            />
    </LinearLayout>

</LinearLayout>