<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/CustomDialog"
    >

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >



        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/dialog_message"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/dialogImage"
            android:layout_width="288dp"
            android:layout_height="103dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/pwd" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/left_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:background="@color/white"
                app:cornerRadius="25dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/right_button"
                android:textColor="@color/danger"
                app:backgroundTint="@color/white"



                />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>