<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/CutosmDialog"
    >

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@color/black"

            />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/dialog_message"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:visibility="gone"

            />

        <ImageView
            android:id="@+id/dialogImage"
            android:layout_width="235dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/received"
            android:visibility="gone"

            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/left_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:background="@color/white"
                app:cornerRadius="25dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/right_button"
                android:textColor="@color/danger"
                app:backgroundTint="@color/white"



                />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>